fix jump() to prevent jump up off screen

--- a/flappy.css
+++ b/flappy.css
@@ -65,15 +65,9 @@ body {
     /* animation: obstacle 5s infinite linear; */
 }
 
-/* @keyframes obstacle {
-    0%{left:1300px}
-    100%{left: -100px}
-} */
-
-
 .topObstacle {
     width: 75px;
-    height: 150px;
+    height: 250px;
     background: linear-gradient(0deg, #00396c  50%, rgba(122, 58, 58, 0) 33%), linear-gradient(0deg, #B34EB2 66%, #2B4162 66%);  
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
